force-app/main/default/objects/Declaration_Question__c/Declaration_Question__c.object-meta.xml
<CustomObject>
    <label>Declaration Question</label>
    <nameField>
        <label>Declaration Question Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Declaration Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>