force-app/main/default/objects/Declaration_Question__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Declaration Questions</relationshipLabel>
    <relationshipName>Application_Declaration_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>