force-app/main/default/objects/Declaration_Question__c/fields/Declaration__c.field-meta.xml
<CustomField>
    <fullName>Declaration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Declaration</label>
    <referenceTo>Declaration__c</referenceTo>
    <relationshipLabel>Declaration Questions</relationshipLabel>
    <relationshipName>Declaration_Declaration_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>