force-app/main/default/objects/Declaration_Question__c/fields/Declaration_Question_Response__c.field-meta.xml
<CustomField>
    <fullName>Declaration_Question_Response__c</fullName>
    <label>Declaration Question Response</label>
    <length>255</length>
    <type>Text</type>
</CustomField>