force-app/main/default/objects/Declaration_Question__c/fields/Declaration_Question_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Declaration_Question_Template_Id__c</fullName>
    <label>Declaration Question Template Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>