force-app/main/default/objects/Declaration_Question__c/fields/Registration_History__c.field-meta.xml
<CustomField>
    <fullName>Registration_History__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Registration History</label>
    <referenceTo>Registration_History__c</referenceTo>
    <relationshipLabel>Declaration Questions</relationshipLabel>
    <relationshipName>Renewal_Declaration_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>